--- a/package.json
+++ b/package.json
@@ -3,7 +3,12 @@
   "description": "Free hugs for the ones who need it!",
   "version": "0.0.1",
   "private": true,
+  "scripts": {
+    "start": "node app"
+  },
   "dependencies": {
-    "express": "3.x"
+    "express": "3.0.6",
+    "ejs": "*",
+    "stylus": "*"
   }
 }
