--- a/package.json
+++ b/package.json
@@ -7,13 +7,10 @@
     "start": "node app"
   },
   "dependencies": {
-<<<<<<< Updated upstream
     "express": "3.0.6",
     "ejs": "*",
-    "stylus": "*"
-=======
+    "stylus": "*",
     "express": "3.x",
     "twilio": "1.1.0"
->>>>>>> Stashed changes
   }
 }
