--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "ejs": "*",
     "stylus": "*",
     "express": "3.x",
-    "twilio": "1.1.0"
+    "twilio": "1.1.0",
+    "mongodb": "1.2.14"
   }
 }
