--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "stylus": "*",
     "express": "3.x",
     "twilio": "1.1.0",
-    "mongodb": "1.2.14"
+    "mongodb": "1.2.14",
+    "backbone": "1.0.0",
   }
 }
