--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "twilio": "1.1.0",
     "mongodb": "1.2.14",
     "backbone": "1.0.0",
-    "ejs-locals": "~1.0.2"
+    "ejs-locals": "~1.0.2",
+    "passport": "0.1.16",
+    "passport-facebook": "0.1.5"
   }
 }
